@@ -77,10 +77,6 @@ Dist::Zilla::Plugin::BumpVersionAfterRelease::Transitional = 0.004
 Dist::Zilla::Plugin::Git::Push = 0
 Dist::Zilla::Plugin::CheckIssues = 0
 Dist::Zilla::Plugin::ConfirmRelease = 0
-; FIXME: [PodWeaver] needs to inject plugin and section prereqs
-Pod::Weaver::PluginBundle::Default = 4.000
-Pod::Weaver::Plugin::Transformer = 0
-Pod::Elemental::Transformer::List = 0
 
 ; these should all be injected by the plugins themselves; patches are pending.
 [Prereqs / dzil plugin bundle (indirect)]
@@ -151,15 +147,6 @@ Pod::Weaver::Section::Contributors = 0.008
 -phase = runtime
 -relationship = requires
 Pod::Elemental::Transformer::List = 0
-
-; These prereqs are for the local weaver.ini, not the weaver.ini being
-; used in dists that use this plugin bundle.
-; TODO: [PodWeaver] should inject develop prereqs on all the
-; PW plugins/transformers/sections it sees in weaver.ini
-; authordep Pod::Weaver::PluginBundle::Default
-; authordep Pod::Weaver::Plugin::Transformer
-; authordep Pod::Elemental::Transformer::List
-; authordep Pod::Weaver::Section::Contributors = 0.008
 
 [Prereqs / release_tests]
 -phase = runtime
